--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,3 +71,8 @@ services:
     image: redis:latest
     ports:
       - "127.0.0.1:${HOST_MACHINE_REDIS_PORT}:6379"
+  solr1:
+    image: solr:8.7.0
+    container_name: "${COMPOSE_PROJECT_NAME}-solr"
+    ports:
+      - "127.0.0.1:8981:8983"
